WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123664
Generated color wheel displays incorrectly (regressed in
r155567
)
https://bugs.webkit.org/show_bug.cgi?id=123664
Summary
Generated color wheel displays incorrectly (regressed in r155567)
Antoine Quint
Reported
2013-11-02 06:46:56 PDT
Created
attachment 215807
[details]
Color wheel test case The attached test case where we draw a color wheel programmatically using the CanvasRenderingContext2D API renders incorrectly on ToT where it used to work fine. Regressing shows that this rendered as expected as of
r155565
and incorrectly with
r155567
,
r155567
was untested but given it's a Windows-specific fix, it's likely that this regressed in
http://trac.webkit.org/changeset/155567
, a code change introduced to fix
https://bugs.webkit.org/show_bug.cgi?id=121141
.
Attachments
Color wheel test case
(1.47 KB, text/html)
2013-11-02 06:46 PDT
,
Antoine Quint
no flags
Details
the patch
(3.84 KB, patch)
2013-11-03 18:12 PST
,
Filip Pizlo
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-11-02 06:47:10 PDT
<
rdar://problem/15377184
>
Filip Pizlo
Comment 2
2013-11-02 10:08:47 PDT
Looks like a fun bug!
Filip Pizlo
Comment 3
2013-11-03 17:48:22 PST
Yeah, it's obviously a miscompile in hsl2rgb().
Filip Pizlo
Comment 4
2013-11-03 18:12:33 PST
Created
attachment 215883
[details]
the patch
Filip Pizlo
Comment 5
2013-11-03 20:22:44 PST
Landed in
http://trac.webkit.org/changeset/158556
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug